@@ -2965,6 +2965,13 @@ int     file_is_binary(FILE *f);
 void    err_flush(void);
 void    err_printf(const char* pat, ...);
 GEN     gp_getenv(const char *s);
+void    gp_fileclose(long n);
+long    gp_fileextern(char *s);
+long    gp_fileopen(char *s, char *mode);
+GEN     gp_fileread(long n);
+GEN     gp_filereadstr(long n);
+void    gp_filewrite(long n, const char *s);
+void    gp_filewrite1(long n, const char *s);
 GEN     gp_read_file(const char *s);
 GEN     gp_read_str_multiline(const char *s, char *last);
 GEN     gp_read_stream(FILE *f);
