@@ -6,4 +6,26 @@ setting y
 y
 2
 ["1+1"]
-Total time spent: 1
+1:1
+2:2
+3:3
+4:4
+5:5
+6:6
+7:7
+8:8
+9:9
+10:10
+11:12345678910
+1:1
+2:2
+3:3
+4:4
+5:5
+6:6
+7:7
+8:8
+9:9
+10:10
+11:12345678910
+Total time spent: 0
